--- a/apache/meta/main.yml
+++ b/apache/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
   author: Jobin James
   description: System administrator
-  company: EQS
+  company: DevOpsByte
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
